# admob-example

./: Cargo.toml  README.md  rustfmt.toml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/kotlin/: AdActivity.kt  NativeActivity.kt
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: lib.rs
