[workspace]
members = ["mobile"]

[package]
name = "snendev_ad_example"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    # defaults excluding audio,vorbis
    "bevy_asset",
    "bevy_render",
    "bevy_ui",
    "bevy_winit",
    "png",
    "tonemapping_luts",
] }

[build-dependencies]
embed-resource = "1.4"
